--- a/MemoryGameLeprechauns/MemoryGameLeprechauns/MemoryGameLeprechauns.vbproj
+++ b/MemoryGameLeprechauns/MemoryGameLeprechauns/MemoryGameLeprechauns.vbproj
@@ -171,6 +171,12 @@
   <ItemGroup>
     <None Include="Resources\Splashscreen.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\TheLeprechaunsButton-Exit.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\TheLeprechaunsButton-Exit-Clicked.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
