--- a/MemoryGameLeprechauns/MemoryGameLeprechauns/MemoryGameLeprechauns.vbproj
+++ b/MemoryGameLeprechauns/MemoryGameLeprechauns/MemoryGameLeprechauns.vbproj
@@ -192,6 +192,15 @@
   <ItemGroup>
     <None Include="Resources\TheLeprechaunsSpeelveld.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\TheLeprechaunsCardSelected.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\TheLeprechaunsButton_Menu.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\TheLeprechaunsButton_Menu_clicked.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
