--- a/MemoryGameLeprechauns/MemoryGameLeprechauns/MemoryGameLeprechauns.vbproj
+++ b/MemoryGameLeprechauns/MemoryGameLeprechauns/MemoryGameLeprechauns.vbproj
@@ -204,6 +204,12 @@
   <ItemGroup>
     <None Include="Resources\TheLeprechaunsStartScherm.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\TheLeprechaunsButton_Exit_Clicked1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\TheLeprechaunsButton_Menu_clicked_new1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
