--- a/MemoryGameLeprechauns/MemoryGameLeprechauns/MemoryGameLeprechauns.vbproj
+++ b/MemoryGameLeprechauns/MemoryGameLeprechauns/MemoryGameLeprechauns.vbproj
@@ -72,6 +72,12 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BackgroundSong.Designer.vb">
+      <DependentUpon>BackgroundSong.vb</DependentUpon>
+    </Compile>
+    <Compile Include="BackgroundSong.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="MemorySpel.Designer.vb">
       <DependentUpon>MemorySpel.vb</DependentUpon>
     </Compile>
@@ -108,6 +114,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="BackgroundSong.resx">
+      <DependentUpon>BackgroundSong.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MemorySpel.resx">
       <DependentUpon>MemorySpel.vb</DependentUpon>
     </EmbeddedResource>
